`byte-compile-warning-enabled-p', `byte-compile-disable-warning', and
`byte-compile-enable-warning.'

** shell.el no longer defines the aliases `dirtrack-toggle' and
`dirtrack-mode' for `shell-dirtrack-mode'.  These names were removed
because they clash with commands provided by dirtrack.el.  Use
`shell-dirtrack-mode' instead.


* Lisp Changes in Emacs 23.1

+++
** New function `match-substitute-replacement' returns the result of
`replace-match' without actually using it in the buffer.

+++
** A list of default values can be specified for the DEFAULT argument of
functions `read-from-minibuffer', `read-string', `read-command',
`read-variable', `read-buffer', `completing-read'.  Elements of this list
are available for inserting into the minibuffer by typing `M-n'.
For empty input these functions return the first element of this list.

** `custom-note-var-changed' tells Custom to treat the change in a certain
variable as having been made within Custom.

** `frame-inherited-parameters' lets new frames inherit parameters from
the selected frame.

** New keymap `input-decode-map' overrides like key-translation-map, but
applies before function-key-map.  Also it is terminal-local contrary to
key-translation-map.  Terminal-specific key-sequences are generally added to
this map rather than to function-key-map now.

** The new macro `declare-function' suppresses compiler warnings about
undefined functions.  The new `check-declare' package verifies that such
statements are accurate (i.e. the functions are actually defined in
the specified files).

** The new function `read-color' reads a color name using the minibuffer.

** Changes related to multiple tty support.

*** $TERM is now set to `dumb' for subprocesses.  If you want to know the
$TERM inherited by Emacs you will have to look inside initial-environment.

*** $DISPLAY is now dynamically inherited from the frame's `display'.

*** The `window-system' variable has been made frame-local. The new