@@ -1,3 +1,8 @@
+2007-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/lisp.el (beginning-of-defun-raw): Pass `arg' down to
+	beginning-of-defun-function.
+
 2007-11-22  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* mail/hashcash.el: Move from ../gnus.  Add hashcash payments to email.
